--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              <nav>
                  <div class="search-icon"></div>
                  <div class="theme-toggle"></div>
-                 <div class="language-dropdown">Eng</div>
+                 <div class="language-dropdown"></div>
              </nav>
          </div>
      </header>
@@ -65,7 +65,10 @@
                     <h2>Suggestion & Complain</h2>
                 </div>
                 <div class="contact-form-container">
-                    <form id="contactForm">
+
+                    <p>Email Us <a href="mailto:hhc">Go-Pitch@gmail.com</a></p>
+                    <p>contact <a href="tell:21122">221555555555555555</a></p>
+                    <!-- <form class="contact-form" id="contactForm">
                         <div class="form-group-row">
                             <input class="form" type="text" id="name" name="name" placeholder="Name" required>
                             <input class="form" type="email" id="email" name="email" placeholder="Email" required>
@@ -74,7 +77,7 @@
                             <textarea id="message" name="message" rows="4" placeholder="Message" required></textarea>
                         </div>
                         <button type="submit" class="button form-button">Send Message</button>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </section>
