--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                 <div class="d-flex align-items-center gap-3">
                     <button class="btn btn-primary d-none d-lg-block">Join Waitlist</button>
                     <button id="theme-toggle" class="btn theme-toggle">
-                        <i class="fas fa-mobile-alt"></i>
+                        <i class="fas fa-moon"></i>
                     </button>
                 </div>
             </div>
