--- a/team.html
+++ b/team.html
@@ -68,7 +68,7 @@
                 <div class="d-flex align-items-center gap-3">
                     <button class="btn btn-primary d-none d-lg-block">Join Waitlist</button>
                     <button id="theme-toggle" class="btn theme-toggle">
-                        <i class="fas fa-mobile-alt"></i>
+                        <i class="fas fa-moon"></i>
                     </button>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <div class="col-md-8">
                     <div class="row team-profile">
                         <div class="col-md-4 mb-3 mb-md-0">
-                            <img src="https://i.ibb.co/3sS7Lqg/uchenna-victor.jpg" alt="Uchenna Victor (CEO)" class="img-fluid">
+                            <img src="img/uche.jpg" alt="Uchenna Victor (CEO)" class="img-fluid">
                         </div>
                         <div class="col-md-8 text-start">
                             <h4 class="fw-bold">Uchenna Victor</h4>
@@ -99,7 +99,7 @@
                 <div class="col-md-8">
                     <div class="row team-profile">
                         <div class="col-md-4 mb-3 mb-md-0">
-                            <img src="https://i.ibb.co/C0hYp9b/orji-emmanuel.jpg" alt="Orji Emmanuel (CTO)" class="img-fluid">
+                            <img src="img/orji.jpg" alt="Orji Emmanuel (CTO)" class="img-fluid">
                         </div>
                         <div class="col-md-8 text-start">
                             <h4 class="fw-bold">Orji Emmanuel</h4>
