--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container container-xl">
             <div class="row align-items-center animate-on-scroll">
                 <div class="col-lg-6 benefit-image">
-                    <img src="img/hero.jpg" alt="Benefits of Go-Pitch Pro" class="img-fluid" loading="lazy">
+                    <img src="img/foot.jpg" alt="Benefits of Go-Pitch Pro" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-lg-6 benefit-text mt-4 mt-lg-0 animate-on-scroll delay-1">
                     <h2 class="fw-bold">Experience the True Benefits of Pitch Pro.</h2>
